--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -158,9 +158,16 @@
 @import 'layout/aside';
 @import 'layout/footer';
 
+@import 'base/win-colors';
+
+
+@import 'mixins/menus';
+
 // Modules
 // @import 'modules/block';
 // @import 'modules/button';
+@import 'modules/menu_block';
+
 
 // States
 // @import 'states/collapse';
