--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -64,10 +64,10 @@
 //
 @include foundation-global-styles;
 @include foundation-grid;
-//@include foundation-flex-grid;
+@include foundation-flex-grid;
 @include foundation-float-classes;
-//@include foundation-flex-classes;
-//@include foundation-xy-grid-classes;
+@include foundation-flex-classes;
+@include foundation-xy-grid-classes;
 @include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
