--- a/web/themes/custom/winsports/scss/layout/_header.scss
+++ b/web/themes/custom/winsports/scss/layout/_header.scss
@@ -1,3 +1,14 @@
 // Non-modular or client styles for .l-header region.
 
 
+.tool-meta-header{
+    background-color: $win-green-dark;
+}
+
+.meta-header{
+    background-color: $win-green;
+}
+
+.sub-meta-header{
+    background-color: $win-gray;
+}
