full width regions

--- a/web/themes/custom/winsports/scss/_settings.scss
+++ b/web/themes/custom/winsports/scss/_settings.scss
@@ -866,3 +866,11 @@ $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: $grid-padding-gutters;
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
+
+
+//custom
+.full-width{
+
+  padding:30px 0px;
+
+}
