--- a/web/themes/custom/winsports/scss/base/_win-colors.scss
+++ b/web/themes/custom/winsports/scss/base/_win-colors.scss
@@ -5,8 +5,9 @@
 
 $win-primary: #f45205;
 $win-green-ligth: #4ffac2;
-$win-green-dark: #0e383e;
+$win-green-dark: #0a272b;
 $win-green: #0f3b40;
+$win-greem-alternative: #0e3c44;
 $win-gray: #e4e4e4;
 $win-title: #0e3b45;
 $win-yellow: #f7cd04;
