--- a/web/themes/custom/winsports/scss/layout/_header.scss
+++ b/web/themes/custom/winsports/scss/layout/_header.scss
@@ -3,10 +3,12 @@
 
 .tool-meta-header{
     background-color: $win-green-dark;
+    padding: 0 0;
 }
 
 .meta-header{
     background-color: $win-green;
+    padding: 0 0;
 }
 
 .sub-meta-header{
