--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -156,6 +156,8 @@
 @import 'base/win-colors';
 
 @import 'mixins/menus';
+@import 'mixins/titles';
+
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/aside';
