--- a/web/themes/custom/winsports/scss/layout/_footer.scss
+++ b/web/themes/custom/winsports/scss/layout/_footer.scss
@@ -2,3 +2,11 @@
 footer{
     background-color: $win-green-dark; 
 }
+
+.after-content{
+    background-color: $win-gray
+}
+
+.pre-footer{
+    background-color: $win-greem-alternative; 
+}
