--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -157,6 +157,7 @@
 
 @import 'mixins/menus';
 @import 'mixins/titles';
+@import 'mixins/buttons';
 
 @import 'layout/header';
 @import 'layout/main';
