--- a/web/themes/custom/winsports/scss/layout/_header.scss
+++ b/web/themes/custom/winsports/scss/layout/_header.scss
@@ -1,6 +1,10 @@
 // Non-modular or client styles for .l-header region.
 
 
+header{
+    padding: 30px 0px!important;
+}
+
 .tool-meta-header{
     background-color: $win-green-dark;
     padding: 0 0;
