--- a/web/themes/custom/winsports/scss/modules/_block.scss
+++ b/web/themes/custom/winsports/scss/modules/_block.scss
@@ -60,3 +60,16 @@ h3 {
     }
 
 }
+
+
+.win-play {
+    background: url(/themes/custom/winsports/images/win-play.png) no-repeat;
+    position: absolute;
+    width: 50px;
+    height: 47px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
