--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -171,6 +171,8 @@
 // @import 'modules/button';
 @import 'modules/block';
 @import 'modules/menu_block';
+@import 'modules/topbar';
+
 
 
 // States
