--- a/web/themes/custom/winsports/scss/base/_win-colors.scss
+++ b/web/themes/custom/winsports/scss/base/_win-colors.scss
@@ -1,26 +1,16 @@
-
-/*
-*  Winsports Colors  
-*/
+// Winsports Colors  
 
 $win-primary: #f45205;
 $win-green-ligth: #4ffac2;
 $win-green-dark: #0a272b;
 $win-green: #0f3b40;
 $win-greem-alternative: #0e3c44;
-$win-gray: #e4e4e4;
+$win-gray: #e3e3e3;
 $win-title: #0e3b45;
 $win-yellow: #f7cd04;
 
+// Fonts size
 
-/*
-* Fonts size
-*/
-
-$win-menu-small: 0.6vw;
-$win-menu: 0.8vw;
-$win-title-color:#0e3c42;
-
-
-
-
+$win-menu-small: .6vw;
+$win-menu: .8vw;
+$win-title-color: #0A3B41;
