--- a/web/themes/custom/winsports/scss/layout/_footer.scss
+++ b/web/themes/custom/winsports/scss/layout/_footer.scss
@@ -1,12 +1,12 @@
 // Non-modular or client styles for .l-footer region.
-footer{
-    background-color: $win-green-dark; 
+footer {
+  background-color: $win-green-dark;
 }
 
-.after-content{
-    background-color: $win-gray
+.after-content {
+  background-color: $win-gray;
 }
 
-.pre-footer{
-    background-color: $win-greem-alternative; 
+.pre-footer {
+  background-color: $win-greem-alternative;
 }
