--- a/web/themes/custom/winsports/scss/layout/_header.scss
+++ b/web/themes/custom/winsports/scss/layout/_header.scss
@@ -1,20 +1,20 @@
 // Non-modular or client styles for .l-header region.
 
 
-header{
-    padding: 30px 0px!important;
+header {
+  padding: 30px 0 !important;
 }
 
-.tool-meta-header{
-    background-color: $win-green-dark;
-    padding: 0 0;
+.tool-meta-header {
+  background-color: $win-green-dark;
+  padding: 0;
 }
 
-.meta-header{
-    background-color: $win-green;
-    padding: 0 0;
+.meta-header {
+  background-color: $win-green;
+  padding: 0;
 }
 
-.sub-meta-header{
-    background-color: $win-gray;
+.sub-meta-header {
+  background-color: $win-gray;
 }
