--- a/web/themes/custom/winsports/scss/mixins/_menus.scss
+++ b/web/themes/custom/winsports/scss/mixins/_menus.scss
@@ -1,30 +1,26 @@
+//  $aling : 'left' or 'right' or 'center'
+//  $text-transform :  'uppercase' or 'lowercase' or ...
+//  $font-size: 0.6vw;
 
-
-
-/*
-*  $aling : 'left' or 'right' or 'center'
-*  $text-transform :  'uppercase' or 'lowercase' or ...
-*  $font-size: 0.6vw;
-*/
 @mixin menu-items-align($align, $text-transform, $font-size, $color-font) {
 
-    @if $align == center {
-        float: none;
-        text-align: $align;
-        display: inline-block;
-    }
+  @if $align == center {
+    display: inline-block;
+    float: none;
+    text-align: $align;
+  }
 
-    
 
-    li{
-      
-        float: $align;
-        a{
-            text-transform: $text-transform;
-            font-size: $font-size;
-            color:$color-font;
-        }
+  li {
+
+    float: $align;
+
+    a {
+      color: $color-font;
+      font-size: $font-size;
+      text-transform: $text-transform;
     }
-    
-    
+  }
+
+
 }
