--- a/web/themes/custom/winsports/scss/mixins/_titles.scss
+++ b/web/themes/custom/winsports/scss/mixins/_titles.scss
@@ -1,31 +1,36 @@
-
-/*
-*
-*   font-size: 0.9vw;
-*   color: white;
-*   font-weight: 600;
-*   text-transform: capitalize;
-*
-*/
+//   font-size: 0.9vw;
+//   color: white;
+//   font-weight: 600;
+//   text-transform: capitalize;
 
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4,
+{
+  color: $win-title-color;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  a {
     color: $win-title-color;
-    text-transform: uppercase;
-    font-weight: 600;
-    a{
-        color: $win-title-color;
-    }
+  }
 }
 
+.title-color{
+  color: $win-title-color;
+  a {
+    color: $win-title-color;
+  }
+}
+@mixin title-block($color, $font-size, $font-weight, $text-transform) {
 
-@mixin title-block( $color, $font-size, $font-weight, $text-transform ){
-
-    h2{
-        font-size: $font-size;
-        color: $color;
-        font-weight: $font-weight;
-        text-transform: $text-transform;
-    }
+  h2 {
+    color: $color;
+    font-size: $font-size;
+    font-weight: $font-weight;
+    text-transform: $text-transform;
+  }
 
 }
