--- a/web/themes/custom/winsports/scss/modules/_block.scss
+++ b/web/themes/custom/winsports/scss/modules/_block.scss
@@ -1,83 +1,90 @@
-.copy-rights{
-    color: white;
-} 
+.copy-rights {
+  color: $pure-white;
+}
+.block-title{
+  font-family: $font-family-title;
+  letter-spacing: 0.025em;
+  font-weight: 500;
+}
+#block-socialmedialinks {
+  text-align: center;
 
-#block-socialmedialinks{
+  .fa-2x {
+    color: $pure-white;
+  }
+
+  ul.platforms {
+    li {
+      border: 3px solid $pure-white;
+      border-radius: 50%;
+    }
+  }
+
+}
+
+.more-link {
+
+  @include buttons($win-green-ligth, 10px, 76px, $win-green)
+
+}
+
+#block-views-block-goles-liga-aguila-block-1 {
+
+}
+
+#block-views-block-lo-ultimo-block-1 {
+
+}
+
+#block-views-block-equipos-home-block-1, #block-views-block-equipos-home-block-1-2 {
+  ul {
     text-align: center;
 
-    .fa-2x{
-        color:white;
+    li {
+      display: inline-block;
     }
-    ul.platforms {
-        li{
-            border: 3px solid white;
-            border-radius: 50%;
-        }
-    }
-    
-}
-
-.more-link{
-
-    @include buttons($win-green-ligth, 10px, 76px, $win-green )
-
-}
-
-#block-views-block-goles-liga-aguila-block-1{
-
-}
-
-#block-views-block-lo-ultimo-block-1{
-
-}
-
-#block-views-block-equipos-home-block-1,#block-views-block-equipos-home-block-1-2{
-    ul{
-        text-align: center;
-        li{
-            display: inline-block;
-        }
-    }
+  }
 }
 
 
 h3 {
-    &.slider-items-title{
-        font-size: 12px;
-    }
+  &.slider-items-title {
+    font-size: 12px;
+  }
 }
 
-.list-decoration-none{
-    .item-list{
-        ul{
-            margin: 0;
-            padding: 0;
-            li{
-                padding: 0;
-                list-style: none;
-            }
-        }
+.list-decoration-none {
+  .item-list {
+    ul {
+      margin: 0;
+      padding: 0;
+
+      li {
+        list-style: none;
+        padding: 0;
+      }
     }
+  }
 
 }
 
 
 .win-play {
-    background: url(/themes/custom/winsports/images/win-play.png) no-repeat;
-    position: absolute;
-    width: 50px;
-    height: 47px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+  background: url('/themes/custom/winsports/images/win-play.png') no-repeat;
+  bottom: 0;
+  height: 47px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
 }
 
-#block-views-block-patrocinadores-block-1{
-    h2{
-        display: inline-block;
-        width: 30%;
-        float: left;
-    }
+#block-views-block-patrocinadores-block-1 {
+  h2 {
+    display: inline-block;
+    float: left;
+    width: 30%;
+  }
 }
