--- a/web/themes/custom/winsports/scss/modules/_menu_block.scss
+++ b/web/themes/custom/winsports/scss/modules/_menu_block.scss
@@ -1,104 +1,114 @@
-
-
 #block-toolheadermenu {
-    .menu{
-        @include menu-items-align( left, uppercase, $win-menu-small, white );
-        
-    }
-    padding-left: 0!important;
-    
-}
- 
-
-#block-toolheadermenuaux{
-    .menu{
-        @include menu-items-align( right, uppercase, $win-menu-small, white )
-    }
-    
+  padding-left: 0 !important;
+  .menu {
+    @include menu-items-align(left, uppercase, $win-menu-small, white);
+  }
 }
 
-#block-navegacionprincipal{
-    margin: 13px 0px;
-    
-    .menu{
-        @include menu-items-align( left, uppercase, $win-menu, white )
-    }
-    
-}
 
-#block-footermenu{
-    .menu{
-        @include menu-items-align( center, capitalize, $win-menu, $win-green-ligth )
-    }
-}
-
-#block-futbolcolombiano{
-    @include title-block(white, 0.9vw, 600, capitalize)
-    .menu{
-        @include menu-items-align( left, capitalize, $win-menu, gray )
-        li{
-            display: inline-block;
-            width:100%;
-        }
-    }
-
-    
-}
-
-#block-futbolinternacional{
-
-    @include title-block(white, 0.9vw, 600, capitalize)
-    .menu{
-        @include menu-items-align( left, capitalize, $win-menu, gray )
-        li{
-            display: inline-block;
-            width:100%;
-            a{ 
-                padding: 0.7rem 0rem
-            }
-        }
-    }
+#block-toolheadermenuaux {
+  .menu {
+    @include menu-items-align(right, uppercase, $win-menu-small, white)
+  }
 
 }
 
-#block-masdeportes{
-    @include title-block(white, 0.9vw, 600, capitalize)
-    .menu{
-        @include menu-items-align( left, capitalize, $win-menu, gray )
-        li{
-            display: inline-block;
-            width:100%;
-            a{ 
-                padding: 0.7rem 0rem
-            }
-        }
-    }
+#block-navegacionprincipal {
+  margin: 13px 0;
+
+  .menu {
+    @include menu-items-align(left, uppercase, $win-menu, white)
+  }
+
 }
 
-#block-videos{
-    @include title-block(white, 0.9vw, 600, capitalize)
-    .menu{
-        @include menu-items-align( left, capitalize, $win-menu, gray )
-        li{
-            display: inline-block;
-            width:100%;
-            a{ 
-                padding: 0.7rem 0rem
-            }
-        }
-    }
+#block-footermenu {
+  .menu {
+    @include menu-items-align(center, capitalize, $win-menu, $win-green-ligth)
+  }
 }
 
-#block-opinion{
-    @include title-block(white, 0.9vw, 600, capitalize)
-    .menu{
-        @include menu-items-align( left, capitalize, $win-menu, gray )
-        li{
-            display: inline-block;
-            width:100%;
-            a{ 
-                padding: 0.7rem 0rem
-            }
-        }
+#block-futbolcolombiano {
+  @include title-block(white, .9vw, 600, capitalize)
+
+  .menu {
+    @include menu-items-align(left, capitalize, $win-menu, gray)
+
+    li {
+      display: inline-block;
+      width: 100%;
     }
-} 
+  }
+
+
+}
+
+#block-futbolinternacional {
+
+  @include title-block(white, .9vw, 600, capitalize)
+
+  .menu {
+    @include menu-items-align(left, capitalize, $win-menu, gray)
+
+    li {
+      display: inline-block;
+      width: 100%;
+
+      a {
+        padding: .7rem 0;
+      }
+    }
+  }
+
+}
+
+#block-masdeportes {
+  @include title-block(white, .9vw, 600, capitalize)
+
+  .menu {
+    @include menu-items-align(left, capitalize, $win-menu, gray)
+
+    li {
+      display: inline-block;
+      width: 100%;
+
+      a {
+        padding: .7rem 0;
+      }
+    }
+  }
+}
+
+#block-videos {
+  @include title-block(white, .9vw, 600, capitalize)
+
+  .menu {
+    @include menu-items-align(left, capitalize, $win-menu, gray)
+
+    li {
+      display: inline-block;
+      width: 100%;
+
+      a {
+        padding: .7rem 0;
+      }
+    }
+  }
+}
+
+#block-opinion {
+  @include title-block(white, .9vw, 600, capitalize)
+
+  .menu {
+    @include menu-items-align(left, capitalize, $win-menu, gray)
+
+    li {
+      display: inline-block;
+      width: 100%;
+
+      a {
+        padding: .7rem 0;
+      }
+    }
+  }
+}
