--- a/web/themes/custom/winsports/scss/modules/_topbar.scss
+++ b/web/themes/custom/winsports/scss/modules/_topbar.scss
@@ -1,3 +1,5 @@
-.toolbar-icon-admin-toolbar-tools-help:before{
-    background-image: url(/sites/default/files/logo-win-micro_2020_1.png)!important;
+.toolbar-icon-admin-toolbar-tools-help {
+  ::before {
+    background-image: url('/sites/default/files/logo-win-micro_2020_1.png') !important;
+  }
 }
