New theme updates

--- a/web/themes/custom/winsports/scss/mixins/_titles.scss
+++ b/web/themes/custom/winsports/scss/mixins/_titles.scss
@@ -12,6 +12,7 @@ h4,
   color: $win-title-color;
   font-weight: 600;
   text-transform: uppercase;
+  font-family: $font-family-title;
 
   a {
     color: $win-title-color;
