--- a/web/themes/custom/winsports/scss/modules/_widgets.scss
+++ b/web/themes/custom/winsports/scss/modules/_widgets.scss
@@ -1,21 +1,68 @@
-.opta-feeds-widget-positions{
+
+#block-futbolcolombiano-estadisticas, .opta-widgets {
   color: #0B3B41;
-  .phase{
-    color: rgba(11,58,64,0.5);
+  .table-option {
+    background-color: #819A9F;
+    font-family: $font-family-title;
+    font-weight: lighter;
+    color: $pure-white;
+
+    a {
+      color: $pure-white;
+
+      &.is-active {
+        color: rgba(11, 58, 64, 1);
+        background-color: #0ef8c3;
+      }
+    }
+    &.menu {
+      a {
+        text-transform: capitalize;
+        padding: 20px 30px;
+        width: 100%;
+        text-align: center;
+      }
+    }
+
+    &.active, &.is-active {
+      background-color: #0ef8c3;
+      color: rgba(11, 58, 64, 1);
+
+      a {
+        color: rgba(11, 58, 64, 1);
+      }
+    }
+  }
+
+  .phase {
+    color: rgba(11, 58, 64, 0.5);
     border-bottom: 4px solid transparent;
-    &.active{
+
+    &.active {
       font-weight: 600;
-      color:rgba(11,58,64,1);
+      color: rgba(11, 58, 64, 1);
       border-bottom: 4px solid #0A3B41;
     }
   }
-  .table-option{
+
+  .Opta > .Opta_W {
+    margin-top: 0;
+  }
+
+  .Opta .Opta-Nav li a {
     background-color: #819A9F;
-    font-family: $font-family-title;
     color: $pure-white;
-    &.active{
-      background-color: #0ef8c3;
-      color:rgba(11,58,64,1);
-    }
+    font-family: $body-font-family;
+  }
+
+  .Opta .Opta-Nav li.Opta-On a {
+    background-color: #0ef8c3;
+    color: rgba(11, 58, 64, 1);
+  }
+
+  .Opta .Opta_F_TR_N .Opta-Striped tbody tr.Opta-FeatureHeader td, .Opta .Opta_F_TR_N .Opta-Striped tbody tr.Opta-FeatureHeader th,
+  .Opta .Opta-Ranking-Bars .Opta-FeatureHeader td, .Opta .Opta-Ranking-Bars .Opta-FeatureHeader th {
+    background-color: #FACA32;
+    color: rgba(11, 58, 64, 1);
   }
 }
