--- a/web/themes/custom/winsports/scss/winsports.scss
+++ b/web/themes/custom/winsports/scss/winsports.scss
@@ -179,6 +179,7 @@ $font-family-title: 'Passion One', cursive;
 @import 'modules/menu_block';
 @import 'modules/topbar';
 @import 'modules/widgets';
+@import 'modules/views';
 
 
 
