--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -1,4 +1,4 @@
-<div class="" style="background-color: #ededed;">
+<div class="opta-widgets" style="background-color: #ededed;">
     <div class="p-4">
         <select class="m-0" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
             <option :value="tour.field_id_equipo_opta + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
