--- a/web/themes/custom/winsports/scss/_settings.scss
+++ b/web/themes/custom/winsports/scss/_settings.scss
@@ -81,6 +81,7 @@ $dark-gray: #8a8a8a;
 $black: #0a0a0a; 
 $white: #fefefe;
 $pure-white: #ffffff;
+$text-color: rgba(11, 58, 64, 1);
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
