--- a/web/themes/custom/winsports/scss/modules/_block.scss
+++ b/web/themes/custom/winsports/scss/modules/_block.scss
@@ -1,10 +1,15 @@
 .copy-rights {
   color: $pure-white;
 }
-.block-title{
+.field-type-ds .field-label,.block-title{
   font-family: $font-family-title;
   letter-spacing: 0.025em;
   font-weight: 500;
+  color:rgba(11,58,64,1);
+}
+.field-type-ds .field-label{
+  font-size: 1.5rem;
+  margin-bottom: 15px;
 }
 #block-socialmedialinks {
   text-align: center;
