--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -12,7 +12,7 @@
             {{ phase.phase.type }}
         </div>
     </div>
-    <div class="border-l-8 mt-6" style="border-color: #FACA32;">
+    <div class="border-l-8 my-6" style="border-color: #FACA32;">
         <div class="ml-1 flex border-b-1 p-1 justify-between text-sm">
             <div class="w-1/2 flex"></div>
             <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
