--- a/web/themes/custom/winsports/scss/_settings.scss
+++ b/web/themes/custom/winsports/scss/_settings.scss
@@ -83,7 +83,7 @@ $white: #fefefe;
 $pure-white: #ffffff;
 $text-color: rgba(11, 58, 64, 1);
 $body-background: $white;
-$body-font-color: $black;
+$body-font-color: $text-color;
 $body-font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
