--- a/web/themes/custom/winsports/scss/modules/_widgets.scss
+++ b/web/themes/custom/winsports/scss/modules/_widgets.scss
@@ -4,6 +4,7 @@
   .table-option {
     background-color: #819A9F;
     font-family: $font-family-title;
+    letter-spacing: 0.025em;
     font-weight: lighter;
     color: $pure-white;
 
