--- a/web/themes/custom/winsports/scss/modules/_views.scss
+++ b/web/themes/custom/winsports/scss/modules/_views.scss
@@ -99,6 +99,44 @@
       text-transform: none;
     }
   }
+  .owl-controls{
+    //position: absolute;
+    //right: 0;
+    //top: 0;
+    //height: 100%;
+    //margin: 0;
+    //width: 100%;
+    .owl-buttons{
+      //height: 100%;
+      //padding-top: 50%;
+      font-family: $font-family-title;
+      div.owl-next, div.owl-prev{
+        font-size: 2.5rem;
+        font-weight: 100;
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100px;
+        border-radius: 0;
+        color: $text-color;
+        margin: 0;
+        opacity: 1;
+        padding-top: 130px;
+      }
+      div.owl-next{
+        right: 0;
+        text-align: right;
+        background: linear-gradient(270deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 55, 0) 100%);
+      //url('/sites/default/files/icons/next.png') center center no-repeat
+      }
+      div.owl-prev{
+        left: 0;
+        text-align: left;
+        background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 55, 0) 100%);
+        //url('/sites/default/files/icons/next.png') center center no-repeat
+      }
+    }
+  }
 }
 
 .block-views-block-equipos-home-block-1{
