--- a/web/themes/custom/winsports/scss/_settings.scss
+++ b/web/themes/custom/winsports/scss/_settings.scss
@@ -82,6 +82,8 @@ $black: #0a0a0a;
 $white: #fefefe;
 $pure-white: #ffffff;
 $text-color: rgba(11, 58, 64, 1);
+$dark-green: #0A3C42;
+$light-green: #0EF9C4;
 $body-background: $white;
 $body-font-color: $text-color;
 $body-font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
