--- a/web/themes/custom/winsports/scss/modules/_views.scss
+++ b/web/themes/custom/winsports/scss/modules/_views.scss
@@ -1,6 +1,3 @@
-.more-link {
-  clear: both;
-}
 
 .block-views-block-goles-liga-aguila-block-1 {
   .video-home {
@@ -78,7 +75,17 @@
     }
   }
 }
-.block-views-block-lo-ultimo-block-1 {
+.block-views-block-lo-ultimo-block-1,
+.block-views-block-futbol-colombiano-block-1,
+.block-views-block-futbol-internacional-block-1,
+.block-views-block-mas-deportes-block-1{
+  .more-link{
+    text-align: left;
+    margin-bottom: 30px;
+  }
+  .views-exposed-form{
+    display: none;
+  }
   .field-node--node-title{
     font-family: $font-family-title;
     line-height: 1rem;
@@ -100,15 +107,7 @@
     }
   }
   .owl-controls{
-    //position: absolute;
-    //right: 0;
-    //top: 0;
-    //height: 100%;
-    //margin: 0;
-    //width: 100%;
     .owl-buttons{
-      //height: 100%;
-      //padding-top: 50%;
       font-family: $font-family-title;
       div.owl-next, div.owl-prev{
         font-size: 2.5rem;
@@ -127,23 +126,69 @@
         right: 0;
         text-align: right;
         background: linear-gradient(270deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 55, 0) 100%);
-      //url('/sites/default/files/icons/next.png') center center no-repeat
       }
       div.owl-prev{
         left: 0;
         text-align: left;
         background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 55, 0) 100%);
-        //url('/sites/default/files/icons/next.png') center center no-repeat
       }
     }
   }
 }
 
-.block-views-block-equipos-home-block-1{
+.block-views-block-equipos-home-block-1, .block-views-block-equipos-home-block-1-2{
   .field-name-dynamic-token-fieldnode-field-logo-opta{
     img {
       height: 40px;
       width: auto;
     }
+  }
+}
+.block-views-block-programacion-block-1{
+  .views-row{
+    padding: 10px;
+    background-color: #E3E3E3;
+    margin-bottom: 20px;
+  }
+  .field-name-node-title{
+    h3{
+      text-transform: none;
+    }
+  }
+  .field-node--field-canal{
+    h2{
+      font-size: 1rem;
+      text-transform: none;
+      font-weight: normal;
+    }
+  }
+}
+.block-views-block-opinion-block-1{
+  margin-top: 30px;
+  background-color: $dark-green;
+  color: white;
+  .block-title{
+    color: white;
+  }
+  .views-row{
+    margin-bottom: 30px;
+  }
+  .field-node--node-title h3 a{
+    color: white;
+  }
+  .field-user--field-image{
+    img{
+      border-radius: 100%;
+      height: 30px;
+      width: 30px;
+    }
+  }
+  .field-user--field-image, .field-user--field-nombres, .field-user--field-twitter{
+    display: inline-block;
+    padding-right: 10px;
+    font-size: 0.8rem;
+  }
+  .field-user--field-twitter{
+    color: $light-green;
   }
 }
