--- a/web/themes/custom/tailwindcss/src/sass/_utils.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_utils.scss
@@ -12,15 +12,42 @@ input {
 .node__content ol {
   @apply mb-4 leading-normal
 }
-#block-tailwindcss-local-tasks{
+#block-tailwindcss-local-tasks,
+#block-tailwindcss-local-actions{
   @apply bg-blue-100 p-2 text-xs;
-  ul:not(.contextual-links){
+  ul:not(.contextual-links),
+  nav:not(.contextual-links){
     @apply flex;
-    li a{
-      @apply flex px-4 py-2 mx-1 bg-blue-400 text-white;
-      &.is-active{
-        @apply bg-blue-700 text-white;
+    li{
+      a{
+        @apply flex px-4 py-2 mx-1 bg-blue-400 text-white;
+        &#block-tailwindcss-local-actions{
+          @apply bg-orange-400;
+        }
+        &.is-active{
+          @apply bg-blue-700 text-white;
+          &#block-tailwindcss-local-actions{
+            @apply bg-orange-700;
+          }
+        }
       }
     }
   }
+  &#block-tailwindcss-local-actions{
+    @apply bg-orange-100;
+    nav:not(.contextual-links){
+      li{
+        @apply list-none;
+        a{
+          @apply bg-orange-400;
+          &.is-active{
+            @apply bg-orange-700;
+          }
+        }
+      }
+    }
+  }
+}
+#block-tailwindcss-local-actions{
+  
 }
