--- a/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
@@ -112,16 +112,18 @@
         {% endif %}
         {% if node.hasField('field_image_h') %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
+            <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image_h.title }}</div>
         {% elseif node.hasField('field_image') %}
-            <div class="tw-my-4">{{ content.field_image }}</div>
+            <div class="tw-mt-4 tw-mb-2">{{ content.field_image }}</div>
+            <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image.title }}</div>
         {% endif %}
         <div class="body">{{ content.body }}</div>
-        <div class="tags tw-flex tw-text-sm">
+        <div class="tags tw-flex tw-text-sm tw-items-center">
             <div class="tw-whitespace-no-wrap tw-p-2 uppercase label">Tags relacionados</div>
             <div>{{  content.field_tags }}</div>
         </div>
         <div class="comments">
-            <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="100%" data-numposts="5"></div>
+            <div class="fb-comments" data-href="https://www.winsports.co{{ url }}" data-width="100%" data-numposts="5"></div>
         </div>
 
 </article>
