Goals styles and templates

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -25,11 +25,17 @@
   }
 }
 .gol-partido.teaser{
-  .image{
-    img{
+  .image {
+    img {
       @apply w-full;
     }
+    .play-icon{
+      
+      
+    }
   }
+  
+    
 }
 #block-views-block-goles-home-block-1{
   .contextual-region{
