--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -1,9 +1,10 @@
-.title {
+h2, .title{
   font-family: $font-title;
+  @apply tw-text-5xl;
   @apply tw-text-primary tw-tracking-wide tw-leading-none;
 }
-h2.title{
-  @apply tw-text-5xl;
+h2{
+  @apply uppercase mb-2;
 }
 h3.title{
   @apply tw-text-4xl;
