--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
@@ -5,6 +5,9 @@
         {% elseif node.hasField('field_image') %}
             {{ content.field_image }}
         {% endif %}
+        <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
+            <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="tw-h-24 tw-w-24"></a>
+        </div>
     </div>
     <div class="torneo category">{{ content.field_torneo }}</div>
     <div class="title">
