--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -1,7 +1,7 @@
 <div class="opta-widgets" style="background-color: #ededed;">
     <div class="p-4">
         <select class="m-0" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
-            <option :value="tour.field_id_equipo_opta + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
+            <option :value="tour.field_opta_id + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
         </select>    
     </div>
     <div class="flex flex-no-wrap overflow-x-auto w-full">
