Teams block styles

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -52,6 +52,14 @@
     }
   }
 }
+#block-views-block-equipos-del-home-block-1{
+  .contextual-region{
+    @apply flex justify-between items-center;
+    img{
+      @apply h-10;
+    }
+  }
+}
 .more-link{
   font-family: $font-title;
   @apply text-center w-full;
