--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -104,6 +104,13 @@
         </div>
     </div>
 {% endif %}
+{% if page.postcontent2 %}
+    <div class="tw-p-4">
+        <div class="tw-container tw-mx-auto tw-p-2">
+            {{ page.postcontent2 }}
+        </div>
+    </div>
+{% endif %}
 <div>
     {% if page.footer %}
         <div class="tw-p-4 tw-bg-gray">
