--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -104,7 +104,7 @@
         </div>
     </div>
 {% endif %}
-{% if page.postcontent2 %}
+{% if page.postcontent2 or page.postcontent_sidebar %}
     <div class="tw-p-4">
         <div class="tw-container tw-mx-auto tw-p-2">
             <div class="md:tw-flex tw--mx-4">
