--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -10,5 +10,6 @@ $font-title: 'Passion One', cursive;
 @import "texts";
 @import "menu";
 @import "views";
+@import "widgets";
 
 @tailwind utilities;
