--- a/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--equipo.html.twig
@@ -110,9 +110,6 @@
                 <div class="body tw-text-white">{{ content.body }}</div>
             </div>
         </div>
-
-        {{ content.group_nomina }}
-
         {% if node.hasField('field_lead') %}
             <div class="lead my-2">{{ content.field_lead }}</div>
         {% endif %}
@@ -123,5 +120,6 @@
         <div class="comments">
             <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="100%" data-numposts="5"></div>
         </div>
-
 </article>
+
+{{ drupal_block('views_block__nomina_block_1') }}
